samples/_failures_safe/1761337828_f01c30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fd4d12b.c: In function ‘main’:
./samples/SAFE/__tmp_7fd4d12b.c:172:9: error: expected declaration or statement at end of input
  172 |         printf("> ");
      |         ^~~~~~
./samples/SAFE/__tmp_7fd4d12b.c:172:9: error: expected declaration or statement at end of input
